syntax = "proto3";

package asana;

option go_package = "github.com/area/grpc-go/service";

service AsanaService {
  // Reaction to create a Asana Board
  rpc CreateProject(CreateProjectReq) returns(CreateProjectResp) {}

}

message CreateProjectReq {
  string projectName = 1;
  string color = 2;
  string defaultView = 3;
  string workspaceName = 4;
}

message CreateProjectResp {

}

///////////////
